[package]
name = "rust-learning"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] } # Project one 
pulldown-cmark = "0.13.0" # Project one 
maud = "0.27.0" # Project one 

csv = "1.3.1" # Project two 
rocket = { version ="0.5.1", features= ["json"] }# Project two 
serde = { version = "1.0.219", features = ["derive"] }